Bug 476198 - Cursor color is inverted in nested kwin_wayland
Summary: Cursor color is inverted in nested kwin_wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-10-28 14:46 UTC by Fushan Wen
Modified: 2024-01-09 17:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:
qydwhotmail: Wayland+


Attachments
BGR.png (21.50 KB, image/png)
2023-11-03 06:26 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-10-28 14:46:36 UTC
SUMMARY
In yesterday's kwin master build, cursor color is inverted in kcm_cursortheme.


STEPS TO REPRODUCE
1. Run kwin_wayland
2. Run kcmshell6 -platform wayland kcm_cursortheme
3. Hover the cursor over a preview area

OBSERVED RESULT
Wrong cursor color

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Comment 1 Zamundaaa 2023-11-02 17:24:18 UTC
Can't reproduce
Comment 2 Fushan Wen 2023-11-03 06:26:04 UTC
Created attachment 162834 [details]
BGR.png

Still reproducible with kwin at 7949af265dec9cb8089a563d7475a710ac050c4f
Comment 3 Bug Janitor Service 2024-01-09 16:24:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4861
Comment 4 Fushan Wen 2024-01-09 17:04:05 UTC
Git commit a4283a2437ef97093a09b5a0fe7e61bc46adb624 by Fushan Wen.
Committed on 09/01/2024 at 18:04.
Pushed by fusionfuture into branch 'master'.

backends/x11: convert source cursor image to BGRX format

XCB_IMAGE_FORMAT_Z_PIXMAP is in BGRX format.
FIXED-IN: 6.0

M  +1    -1    src/backends/x11/windowed/x11_windowed_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/a4283a2437ef97093a09b5a0fe7e61bc46adb624